stoat/src/snapshots/stoat__test_harness__review_skip_chunk.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: n
focused: #1 of 1
mode: review
size: 80x14
---
[0m[38;2;128;128;128m~   1 [0m[38;2;244;71;71ma[0m                                [0m[38;2;128;128;128m│~   1 [0m[38;2;78;201;176mA[0m
[0m[38;2;128;128;128m~   2 [0m[38;2;204;204;204mb[0m                                [0m[38;2;128;128;128m│~   2 [0m[38;2;204;204;204mb[0m
[0m[38;2;128;128;128m~   3 [0m[38;2;204;204;204mc[0m                                [0m[38;2;128;128;128m│~   3 [0m[38;2;204;204;204mc[0m
[0m[38;2;128;128;128m~   4 [0m[38;2;204;204;204md[0m                                [0m[38;2;128;128;128m│~   4 [0m[38;2;204;204;204md[0m
[0m[38;2;220;220;170ma.txt --- 2/2 --- [0m                     [0m[38;2;128;128;128m│[0m
[0m[1m[38;2;86;156;214m│[0m[38;2;128;128;128m  17 [0m[38;2;204;204;204mq[0m                                [0m[38;2;128;128;128m│[0m[1m[38;2;86;156;214m│[0m[38;2;128;128;128m  17 [0m[38;2;204;204;204mq[0m
[0m[1m[38;2;86;156;214m│[0m[38;2;128;128;128m  18 [0m[38;2;204;204;204mr[0m                                [0m[38;2;128;128;128m│[0m[1m[38;2;86;156;214m│[0m[38;2;128;128;128m  18 [0m[38;2;204;204;204mr[0m
[0m[1m[38;2;86;156;214m│[0m[38;2;128;128;128m  19 [0m[38;2;204;204;204ms[0m                                [0m[38;2;128;128;128m│[0m[1m[38;2;86;156;214m│[0m[38;2;128;128;128m  19 [0m[38;2;204;204;204ms[0m
[0m[1m[38;2;86;156;214m│[0m[38;2;128;128;128m  20 [0m[38;2;244;71;71mt[0m                                [0m[38;2;128;128;128m│[0m[1m[38;2;86;156;214m│[0m[38;2;128;128;128m  20 [0m[38;2;78;201;176mT[0m




[0m[1m[30m[48;2;86;156;214m REV [0m[1m[38;2;204;204;204m[48;2;128;128;128m (unnamed) [0m[38;2;204;204;204m[48;2;128;128;128m[scratch]                                                       [0m
