stoat/src/snapshots/stoat__test_harness__review_stage_current_chunk.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: n
focused: #1 of 1
mode: review
size: 80x14
---
[0m[38;2;78;201;176m+[0m[38;2;128;128;128m   1 [0m[38;2;244;71;71ma[0m  [0m[38;2;220;220;170m┌ review ─────────────────────────────────────────────────────────────┐[0m
[0m[38;2;78;201;176m+[0m[38;2;128;128;128m   2 [0m[38;2;204;204;204mb[0m  [0m[38;2;220;220;170m│[0m[38;2;79;193;255m          ?[0m[38;2;204;204;204m   open the help modal[0m                                    [0m[38;2;220;220;170m│[0m
[0m[38;2;78;201;176m+[0m[38;2;128;128;128m   3 [0m[38;2;204;204;204mc[0m  [0m[38;2;220;220;170m│[0m[38;2;79;193;255m          =[0m[38;2;204;204;204m   increase the editor font size[0m                          [0m[38;2;220;220;170m│[0m
[0m[38;2;78;201;176m+[0m[38;2;128;128;128m   4 [0m[38;2;204;204;204md[0m  [0m[38;2;220;220;170m│[0m[38;2;79;193;255m          -[0m[38;2;204;204;204m   decrease the editor font size[0m                          [0m[38;2;220;220;170m│[0m
[0m[38;2;220;220;170ma.txt ---│[0m[38;2;79;193;255m     Esc, q[0m[38;2;204;204;204m   close the active review[0m                                [0m[38;2;220;220;170m│[0m
[0m[1m[38;2;86;156;214m│[0m[38;2;128;128;128m  17 [0m[38;2;204;204;204mq[0m  [0m[38;2;220;220;170m│[0m[38;2;79;193;255m          n[0m[38;2;204;204;204m   advance to the next unapproved chunk[0m                   [0m[38;2;220;220;170m│[0m
[0m[1m[38;2;86;156;214m│[0m[38;2;128;128;128m  18 [0m[38;2;204;204;204mr[0m  [0m[38;2;220;220;170m│[0m[38;2;79;193;255m       p, k[0m[38;2;204;204;204m   step back to the previous review chunk[0m                 [0m[38;2;220;220;170m│[0m
[0m[1m[38;2;86;156;214m│[0m[38;2;128;128;128m  19 [0m[38;2;204;204;204ms[0m  [0m[38;2;220;220;170m│[0m[38;2;79;193;255m          j[0m[38;2;204;204;204m   advance to the next review chunk[0m                       [0m[38;2;220;220;170m│[0m
[0m[1m[38;2;86;156;214m│[0m[38;2;128;128;128m  20 [0m[38;2;244;71;71mt[0m  [0m[38;2;220;220;170m│[0m[38;2;79;193;255m          s[0m[38;2;204;204;204m   mark the current chunk as staged[0m                       [0m[38;2;220;220;170m│[0m
         [0m[38;2;220;220;170m│[0m[38;2;128;128;128m+18 more[0m                                                             [0m[38;2;220;220;170m│[0m
         [0m[38;2;220;220;170m│[0m[38;2;128;128;128m─────────────────────────────────────────────────────────────────────[0m[38;2;220;220;170m│[0m
         [0m[38;2;220;220;170m│[0m[38;2;204;204;204m2/2 · 1 staged · 0 unstaged · 1 pending[0m                              [0m[38;2;220;220;170m│[0m
         [0m[38;2;220;220;170m└─────────────────────────────────────────────────────────────────────┘[0m
[0m[1m[30m[48;2;86;156;214m REV [0m[1m[38;2;204;204;204m[48;2;30;30;30m (unnamed) [0m[38;2;204;204;204m[48;2;30;30;30m[scratch]                                                       [0m
