stoat/src/snapshots/stoat__test_harness__review_unstage_chunk.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: n
focused: #1 of 1
mode: normal
size: 80x14
---
[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m15[0m[38;2;250;250;250m[48;2;40;44;52m o                                [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m15[0m[38;2;250;250;250m[48;2;40;44;52m o                                 [0m
[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m16[0m[38;2;250;250;250m[48;2;40;44;52m p                                [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m16[0m[38;2;250;250;250m[48;2;40;44;52m p                                 [0m
[0m[38;2;229;192;123m[48;2;40;44;52ma.txt --- 2/2 --- [0m[38;2;250;250;250m[48;2;40;44;52m                     [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m  [0m[38;2;99;109;131m[48;2;40;44;52m17[0m[38;2;250;250;250m[48;2;40;44;52m q                                [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m  [0m[38;2;99;109;131m[48;2;40;44;52m17[0m[38;2;250;250;250m[48;2;40;44;52m q                                 [0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m  [0m[38;2;99;109;131m[48;2;40;44;52m18[0m[38;2;250;250;250m[48;2;40;44;52m r                                [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m  [0m[38;2;99;109;131m[48;2;40;44;52m18[0m[38;2;250;250;250m[48;2;40;44;52m r                                 [0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m  [0m[38;2;99;109;131m[48;2;40;44;52m19[0m[38;2;250;250;250m[48;2;40;44;52m s                                [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m  [0m[38;2;99;109;131m[48;2;40;44;52m19[0m[38;2;250;250;250m[48;2;40;44;52m s                                 [0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m  [0m[38;2;99;109;131m[48;2;40;44;52m20[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;224;108;117m[48;2;40;44;52mt[0m[38;2;250;250;250m[48;2;40;44;52m                                [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m  [0m[38;2;99;109;131m[48;2;40;44;52m20[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;152;195;121m[48;2;40;44;52mT[0m[38;2;250;250;250m[48;2;40;44;52m                                 [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[38;2;250;250;250m[48;2;99;109;131m (unnamed) [0m[38;2;86;182;194m[48;2;99;109;131m review [0m[38;2;250;250;250m[48;2;99;109;131m[scratch] [0m[38;2;99;109;131m[48;2;99;109;131m──────────────────────────────────────────────[0m
