stoat/src/snapshots/stoat__test_harness__run_alt_screen_error.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: inject_output
focused: #1 of 1
mode: run
size: 60x12
---
┌──────────────────────────────────────────────────────────┐
│$ vim                                                     │
│                                                          │
│this command requires a full terminal                     │
│[exit -1]                                                 │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│$                                                         │
└──────────────────────────────────────────────────────────┘
