stoat/src/snapshots/stoat__test_harness__run_empty.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: t
focused: #1 of 1
mode: run
size: 60x12
---
┌──────────────────────────────────────────────────────────┐
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│$                                                         │
└──────────────────────────────────────────────────────────┘
