stoat/src/snapshots/stoat__test_harness__run_exit_code.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: inject_done
focused: #1 of 1
mode: run
size: 60x12
---
┌──────────────────────────────────────────────────────────┐
│$ false                                                   │
│                                                          │
│[exit 1]                                                  │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│$                                                         │
└──────────────────────────────────────────────────────────┘
