stoat/src/snapshots/stoat__test_harness__run_pane_prompt_blocks.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: submit_run
focused: #1 of 1
mode: insert
size: 40x12
---
[0m[38;2;86;182;194m[48;2;40;44;52m/w/proj[0m[38;2;250;250;250m[48;2;40;44;52m ❯ true                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52mok                                      [0m
[0m[38;2;86;182;194m[48;2;40;44;52m/w/proj[0m[38;2;250;250;250m[48;2;40;44;52m ❯ false                         [0m
[0m[38;2;250;250;250m[48;2;40;44;52mboom                                    [0m
[0m[38;2;86;182;194m[48;2;40;44;52m/w/proj[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;224;108;117m[48;2;40;44;52m[5][0m[38;2;250;250;250m[48;2;40;44;52m❯ retry                      [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;86;182;194m[48;2;40;44;52m/w/proj[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;224;108;117m[48;2;40;44;52m[5][0m[38;2;250;250;250m[48;2;40;44;52m❯ [0m[7m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;250;250;250m[48;2;40;44;52m                          [0m
[0m[38;2;40;44;52m[48;2;152;195;121m INS [0m[38;2;250;250;250m[48;2;99;109;131m (unnamed) [run] [0m[38;2;99;109;131m[48;2;99;109;131m──────────────────[0m
