stoat/src/snapshots/stoat__test_harness__run_typed_input_styled.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: o
focused: #1 of 1
mode: run
size: 60x12
---
[0m[36m┌──────────────────────────────────────────────────────────┐[0m
[0m[36m│[0m                                                          [0m[36m│[0m
[0m[36m│[0m                                                          [0m[36m│[0m
[0m[36m│[0m                                                          [0m[36m│[0m
[0m[36m│[0m                                                          [0m[36m│[0m
[0m[36m│[0m                                                          [0m[36m│[0m
[0m[36m│[0m                                                          [0m[36m│[0m
[0m[36m│[0m                                                          [0m[36m│[0m
[0m[36m│[0m                                                          [0m[36m│[0m
[0m[36m│[0m                                                          [0m[36m│[0m
[0m[36m│$ [0m[97mecho hello[0m[30m[107m [0m                                             [0m[36m│[0m
[0m[36m└──────────────────────────────────────────────────────────┘[0m
