stoat/src/snapshots/stoat__test_harness__save_failure_shows_message_row.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: normal
size: 80x24
---
  [0m[38;2;99;109;131m1[0m [0m[7m[38;2;250;250;250me[0m[38;2;250;250;250mdited original[0m
  [0m[38;2;99;109;131m2[0m




















[0m[1m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[1m[38;2;250;250;250m[48;2;99;109;131m save-fail [0m[38;2;250;250;250m[48;2;99;109;131ma.txt [+]                                                   1:1 [0m
[0m[31msave failed: /save-fail/a.txt: injected write failure[0m
